syntax = "proto3";

package ArmyAntMessage.System;

message SocketExtendNormal_V0_0_0_1{
	int64 app_id = 1;
	int32 content_length = 2;
	int32 message_code = 3;
}